@@ -33,7 +33,7 @@ http {
         listen      80;
         server_name localhost;
         client_max_body_size 20M;
-        proxy_set_header  X-Real-IP  $remote_addr;
+        proxy_set_header  X-Real-IP  $http_x_forwarded_for;
         proxy_set_header Host $host;
 
         location ~ /api/.* {
